receipt for subscrition

--- a/src/main/resources/templates/finance-page.html
+++ b/src/main/resources/templates/finance-page.html
@@ -17,7 +17,7 @@
 <div class="whiteboard">
     <div class="tabel">
         <h1>Den forventede fortjeneste af nuværende lejeaftaler</h1>
-        <p class="title" th:name="sumofcurrentleases" th:text="${sumcurrentlease} + ' kr.'"></p>
+        <p th:text="${sumcurrentlease}"></p>
     </div>
 </div>
 </body>
