--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -9,6 +9,7 @@ input {
     margin-left: 600px;
 
 }
+
  */
 
 
@@ -38,6 +39,28 @@ input {
     margin-left: 300px;
     padding-top: 100px;
     padding-bottom: 5px;
+}
+
+.receipt{
+    display: flex;
+    margin-left: 100px;
+    margin-right: 100px;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+table{
+    border-collapse: collapse;
+    width: 100%;
+}
+
+table, td, th{
+    text-align: left;
+    border: 2px solid black;
+    background-color: #f2f2f2;
+}
+th, td {
+    padding: 15px;
 }
 
 
