created carpurchase and advanceaggereeemnet

--- a/src/main/resources/templates/fragments/navigator.html
+++ b/src/main/resources/templates/fragments/navigator.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="www.thymeleaf.org">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Startside</title>
@@ -24,7 +24,9 @@
 
             <div class="nav-valg ">
                 <h3>Dataregistrering</h3>
+                <a href="registernewcartofleet">Registrer indkøbt bil</a>
                 <a href="register-car">Registrer ny lejeaftale</a>
+                <a href="registeradvanceagreement">Registrer ny forhåndsaftale</a>
             </div>
 
             <br>
