--- a/src/main/resources/templates/damage.html
+++ b/src/main/resources/templates/damage.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
+<html lang="en" xmlns:th="www.thymeleaf.org">
 <head>
     <title>Skade</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" th:href="@{style.css}"  type="text/css">
     <link rel="stylesheet" th:href="@{fragment.css}"  type="text/css">
 
 </head>
@@ -16,8 +17,22 @@
 </nav>
 
 <div class="whiteboard">
+    <table>
+        <thead>
+        <tr>
+            <th> Skade </th>
+            <th> Pris </th>
+        </tr>
+        </thead>
+        <tbody>
+       <tr th:each="damages : ${damagesforcar}">
+            <td><span th:text="${damages.defectDescription}"> Skade </span></td>
+            <td><span th:text="${damages.price}"> Pris </span></td>
+        </tr>
+        </tbody>
+    </table>
     <div class="tabel">
-<h1>Skade formular</h1>
+<h1>Tilføj skade:</h1>
         <div th:text="${error}" th:if="${error}" style="color: red"></div>
         <p th:name="carid" th:value="${carid}"></p>
 <form action="#" th:action="@{'/damage?carid='+${carid}}" th:object="${damage}" method="post">
