--- a/src/main/resources/templates/damage.html
+++ b/src/main/resources/templates/damage.html
@@ -3,6 +3,7 @@
 <head>
     <title>Skade</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" th:href="@{style.css}"  type="text/css">
     <link rel="stylesheet" th:href="@{fragment.css}"  type="text/css">
 
 </head>
