--- a/src/main/resources/templates/result-damage.html
+++ b/src/main/resources/templates/result-damage.html
@@ -18,7 +18,7 @@
 <section>
         <table>
             <tr>
-                <th>Beskrivels</th>
+                <th>Beskrivelse</th>
                 <th>Pris</th>
             </tr>
             <tr>
