forhåndsaftale med chassis nummer check, opret aftale samt kvittering for hele aftale inklusiv skader

--- a/src/main/resources/templates/fragments/navigator.html
+++ b/src/main/resources/templates/fragments/navigator.html
@@ -26,7 +26,7 @@
                 <h3>Dataregistrering</h3>
                 <a href="registernewcartofleet">Registrer indkøbt bil</a>
                 <a href="register-car">Registrer ny lejeaftale</a>
-                <a href="registeradvanceagreement">Registrer ny forhåndsaftale</a>
+                <a href="caridagreement">Registrer ny forhåndsaftale</a>
             </div>
 
             <br>
