--- a/src/main/resources/templates/register-advance-agreement.html
+++ b/src/main/resources/templates/register-advance-agreement.html
@@ -20,8 +20,9 @@
 <div class="whiteboard">
     <div class="tabel">
         <h1>Registrerings formular</h1>
+        <p th:name="carid" th:value="${carid}"></p>
         <div th:text="${errormessage}" th:if="${errormessage}" style="color: red"></div>
-        <form action="#" th:action="@{/registeradvanceagreement}" th:object="${advanceagreement}" method="post">
+        <form action="#" th:action="@{'/registeradvanceagreement?carid='+${carid}}" th:object="${advanceagreement}" method="post">
             <p>Vilkår: <input type="text" th:field="*{terms}" /></p>
             <p>Kørte kilometer: <input type="text" th:field="*{kilometersDriven}"/></p>
             <p>Købsprisen: <input type="text" th:field="*{purchasePrice}"/></p>
