--- a/src/main/resources/templates/register-advance-agreement-result.html
+++ b/src/main/resources/templates/register-advance-agreement-result.html
@@ -23,10 +23,9 @@
         <section>
             <table>
                 <tr>
-                    <th>ID</th>
+                    <th>Aftale id</th>
                     <th>Vilkår</th>
                     <th>Kørte kilometer</th>
-                    <th>Afslag</th>
                     <th>Overkørte kilometer pris</th>
                     <th>Afslag total pris</th>
                     <th>Købspris</th>
@@ -36,19 +35,25 @@
                     <td><p th:text="${advanceagreement.id}"></p></td>
                     <td><p th:text="${advanceagreement.terms}"></p></td>
                     <td><p th:text="${advanceagreement.kilometersDriven}"></p></td>
-                    <td><p th:text="${advanceagreement.refusalHashMap}"></p></td>
                     <td><p th:text="${advanceagreement.extendKilometerPrice}"></p></td>
-                    <td><p th:text="${advanceagreement.purchasePrice}"></p></td>
-                    <td><p th:text="${advanceagreement.pickUpLocation}"></p></td>
-                    <table>
-                        <tr>
-                            <th>Skade</th>
-                            <th>Pris</th>
-                        </tr>
-                    </table>
+                    <td><p th:text="${advanceagreement.refusalTotalPrice}"></p></td>
                     <td><p th:text="${advanceagreement.purchasePrice}"></p></td>
                     <td><p th:text="${advanceagreement.pickUpLocation}"></p></td>
                 </tr>
+            </table>
+            <table>
+                <thead>
+                <tr>
+                    <th> Skade </th>
+                    <th> Pris </th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="damages : ${damagesforcar}">
+                    <td><span th:text="${damages.defectDescription}"> Skade </span></td>
+                    <td><span th:text="${damages.price}"> Pris </span></td>
+                </tr>
+                </tbody>
             </table>
             <a th:href="registeradvanceagreement">
                 <button class="goto_button">
