--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,10 @@
 </nav>
 
 <div class="whiteboard">
-    <h1>HAlli hallo og lige et øjeblik !!!!!!!!!!!!!!!!!!!!!!!!!</h1>
+
+    <div class="tabel">
+        <h1 id="welcome">VELKOMMEN</h1>
+    </div>
 </div>
 
 </body>
