--- a/src/main/resources/templates/register-location-information.html
+++ b/src/main/resources/templates/register-location-information.html
@@ -23,11 +23,11 @@
             <br>
             <input type="text" name="address">
             <br>
-            by
+            By
             <br>
             <input type="text" name="city">
             <br>
-            postnummer
+            Postnummer
             <br>
             <input type="number" name="postcode">
             <br>
