--- a/src/main/resources/templates/return-car-success.html
+++ b/src/main/resources/templates/return-car-success.html
@@ -23,10 +23,10 @@
         </tr>
 
         <tr>
-            <td><p th:text="${car.chassisNumber}"></p></td>
-            <td><p th:text="${car.model}"></p></td>
-            <td><p th:text="${car.color}"></p></td>
-            <td><p th:text="${car.rented}"></p></td>
+            <td><p th:text="${car.getChassisNumber}"></p></td>
+            <td><p th:text="${car.getModel}"></p></td>
+            <td><p th:text="${car.getColor}"></p></td>
+            <td><p th:text="${car.isRented}"></p></td>
         </tr>
 
     </table>
