--- a/src/main/resources/templates/damage.html
+++ b/src/main/resources/templates/damage.html
@@ -17,6 +17,8 @@
 </nav>
 
 <div class="whiteboard">
+    <div class="receipt">
+        <h1>Nuværende skader:</h1>
     <table>
         <thead>
         <tr>
@@ -42,6 +44,7 @@
     <a href="/"><button class="goto_button">
         Hjem
     </button>
+    </a>
 </form>
 </div>
 </div>
