--- a/src/main/resources/templates/register-advance-agreement-result.html
+++ b/src/main/resources/templates/register-advance-agreement-result.html
@@ -18,6 +18,7 @@
 </nav>
 
 <div class="whiteboard">
+    <div class="receipt">
     <div class="tabel">
         <h1>Forhåndsaftalen er nu oprettet</h1>
         <section>
@@ -66,9 +67,12 @@
 
         </section>
     </div>
+    </div>
+    </div>
 </body>
 
 <br>
 </div>
+
 <!--Side navigator -->
 </html>
