--- a/src/main/resources/templates/result-damage.html
+++ b/src/main/resources/templates/result-damage.html
@@ -14,6 +14,7 @@
 </nav>
 
 <div class="whiteboard">
+    <div class="receipt">
     <div class="tabel">
 <h1>Skades kvittering</h1>
 <section>
@@ -41,7 +42,10 @@
 </a>
 
 </section>
+    </div>
 </div>
+</div>
+
 </body>
 
 <br>
