--- a/src/main/resources/templates/car-register-purchase-result.html
+++ b/src/main/resources/templates/car-register-purchase-result.html
@@ -18,6 +18,7 @@
 </nav>
 
 <div class="whiteboard">
+    <div class="receipt">
     <div class="tabel">
         <h1>Bilen er nu oprettet</h1>
         <section>
@@ -57,6 +58,7 @@
 </body>
 
 <br>
+</div>
 </div>
 <!--Side navigator -->
 </html>
