pushsh made ramus drop down selcet evterhten r

--- a/src/main/resources/templates/car-register-purchase-result.html
+++ b/src/main/resources/templates/car-register-purchase-result.html
@@ -27,6 +27,7 @@
                     <th>Stelnummer</th>
                     <th>Mærke</th>
                     <th>Model</th>
+                    <th>Farve</th>
                     <th>Udstyrsniveau</th>
                     <th>Stålpris</th>
                     <th>Reg.afgift</th>
@@ -37,6 +38,7 @@
                     <td><p th:text="${car.chassisNumber}"></p></td>
                     <td><p th:text="${car.manufacturer}"></p></td>
                     <td><p th:text="${car.model}"></p></td>
+                    <td><p th:text="${car.color}"></p></td>
                     <td><p th:text="${car.equipmentLevel}"></p></td>
                     <td><p th:text="${car.steelPrice}"></p></td>
                     <td><p th:text="${car.registrationFee}"></p></td>
