--- a/src/main/resources/templates/register-advance-agreement-result.html
+++ b/src/main/resources/templates/register-advance-agreement-result.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en" xmlns:th="www.thymeleaf.org">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <title>Forhåndssalg af bil</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -36,10 +36,10 @@
                     <td><p th:text="${advanceagreement.id}"></p></td>
                     <td><p th:text="${advanceagreement.terms}"></p></td>
                     <td><p th:text="${advanceagreement.kilometersDriven}"></p></td>
-                    <td><p th:text="${advanceagreement.extendKilometerPrice}"></p></td>
-                    <td><p th:text="${advanceagreement.refusalTotalPrice}"></p></td>
+                    <td><p th:text="${advanceagreement.extendKilometer}"></p></td>
+                    <td><p th:text="${advanceagreement.refusalPrice}"></p></td>
                     <td><p th:text="${advanceagreement.purchasePrice}"></p></td>
-                    <td><p th:text="${advanceagreement.pickUpLocation}"></p></td>
+                    <td><p th:text="${advanceagreement.locationId}"></p></td>
                 </tr>
             </table>
             <table>
