--- a/src/main/resources/templates/car-register-purchase-result.html
+++ b/src/main/resources/templates/car-register-purchase-result.html
@@ -48,7 +48,7 @@
                 <button class="goto_button">
                     Ny Bil
                 </button></a>
-            <a href="/"><button class="goto_button">
+            <a href="homepage"><button class="goto_button">
                 Hjem
             </button>
             </a>
