--- a/src/main/resources/templates/carid.html
+++ b/src/main/resources/templates/carid.html
@@ -21,7 +21,7 @@
 <form action="#" th:action="@{/carid}" method="post">
     <p>Stelnummer: <input name="carid" type="number"/></p>
     <p><input type="submit" value="Gem" /> <input type="reset" value="Nulstil feltet" /></p>
-    <a href="/"><button class="goto_button">
+    <a href="homepage"><button class="goto_button">
         Hjem
     </button>
     </a>
