--- a/src/main/resources/templates/fragments/navigator.html
+++ b/src/main/resources/templates/fragments/navigator.html
@@ -16,11 +16,11 @@
         <nav class="side-nav">
 
             <div class="nav-valg ">
-                <a href="/">
+                <a href="homepage">
                     <img id="home"  src="pictures/homethree.png">
                 </a>
+                <a href="/">Log Ud</a>
             </div>
-
 
             <div class="nav-valg ">
                 <h3>Dataregistrering</h3>
