--- a/src/main/resources/templates/register-advance-agreement.html
+++ b/src/main/resources/templates/register-advance-agreement.html
@@ -28,7 +28,7 @@
             <p>Købsprisen: <input type="text" th:field="*{purchasePrice}"/></p>
             <p>Afhentningssted: <input type="text" th:field="*{pickUpLocation}"/></p>
            <p><input type="submit" value="Gem" /> <input type="reset" value="Nulstil felterne" /></p>
-            <a href="/"><button class="goto_button">
+            <a href="homepage"><button class="goto_button">
                 Hjem
             </button>
             </a>
