--- a/src/main/resources/templates/result-damage.html
+++ b/src/main/resources/templates/result-damage.html
@@ -36,7 +36,7 @@
     Ny bil
 </button>
 </a>
-<a href="/"><button class="goto_button">
+<a href="homepage"><button class="goto_button">
     Hjem
 </button>
 </a>
