--- a/src/main/resources/templates/return-car-success.html
+++ b/src/main/resources/templates/return-car-success.html
@@ -33,7 +33,7 @@
     </table>
     </form>
 
-    <a href="/"> <button class="goto_button"> Hjem</button></a>
+    <a href="homepage"> <button class="goto_button"> Hjem</button></a>
 
     </div>
 </div>
