--- a/src/main/resources/templates/view-leased-cars.html
+++ b/src/main/resources/templates/view-leased-cars.html
@@ -32,6 +32,9 @@
                 </tr>
             </table>
         </form>
+        <a href="homepage">
+            <button class="goto_button">Forside</button>
+        </a>
     </div>
 </div>
 </body>
