--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -9,6 +9,7 @@
     font-size: 100px;
     margin-left: 75px;
     margin-right: 100px;
+
 }
 h1{
     display: flex;
@@ -74,5 +75,57 @@ table, td, th{
 th, td {
     padding: 15px;
 }
+
+.container{
+    display: flex;
+    width: 100%;
+    height: 100%;
+
+
+}
+
+.login{
+    display: flex;
+    background-color: #f2f2f2;
+    flex-direction: column;
+    padding: 5% 10%;
+    margin: 7% 20%;
+    border: 2px solid;
+
+}
+
+.form{
+    background-color: #f2f2f2;
+}
+
+#loginH1{
+    background-color: #f2f2f2;
+    font-size: 200%;
+}
+
+.loginP{
+    background-color: #f2f2f2;
+    font-size: 150%;
+}
+
+.inputform{
+    width: 90%;
+    background-color: #fff;
+    font-size: 200%;
+}
+.loginInput{
+    width: 20%;
+    font-size: 130%;
+    padding: 5px;
+    margin-top: 10px;
+}
+
+.loginerror{
+    background-color: #f2f2f2;
+    font-size: 150%;
+}
+
+
+
 
 
