--- a/src/main/resources/templates/damage.html
+++ b/src/main/resources/templates/damage.html
@@ -41,7 +41,7 @@
     <p>Beskrivelse: <input type="text" th:field="*{defectDescription}" /></p>
     <p>Pris: <input type="text" th:field="*{price}"/></p>
     <p><input type="submit" value="Gem" /> <input type="reset" value="Nulstil felterne" /></p>
-    <a href="/"><button class="goto_button">
+    <a href="homepage"><button class="goto_button">
         Hjem
     </button>
     </a>
