--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -3,11 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Startside</title>
+    <link rel="stylesheet" th:href="@{fragment.css}"  type="text/css">
     <link rel="stylesheet" th:href="@{style.css}"  type="text/css">
 
 </head>
+
 <body>
 
+<nav>
+    <th:block th:replace="fragments/navigator :: nav"></th:block>
+</nav>
+
+<div class="whiteboard">
+
+    <div class="tabel">
+        <h1 id="welcome">VELKOMMEN</h1>
+    </div>
+</div>
 
 </body>
 </html>
