--- a/src/main/resources/templates/register-advance-agreement-result.html
+++ b/src/main/resources/templates/register-advance-agreement-result.html
@@ -60,7 +60,7 @@
                 <button class="goto_button">
                     Ny aftale
                 </button></a>
-            <a href="/"><button class="goto_button">
+            <a href="homepage"><button class="goto_button">
                 Hjem
             </button>
             </a>
