--- a/src/main/resources/templates/subscription-receipt.html
+++ b/src/main/resources/templates/subscription-receipt.html
@@ -93,7 +93,7 @@
       </tr>
     </table>
     </form>
-    <a href="/"><button class="goto_button">Forside</button></a>
+    <a href="homepage"><button class="goto_button">Forside</button></a>
   </div>
 </div>
 </body>
