--- a/src/main/resources/templates/fragments/navigator.html
+++ b/src/main/resources/templates/fragments/navigator.html
@@ -15,18 +15,18 @@
 
         <nav class="side-nav">
 
-            <div class="nav-valg ">
+            <div class="nav-valg">
                 <a href="/">
-                    <img id="home"  src="pictures/homethree.png">
+                    <img id="home" src="pictures/homethree.png">
                 </a>
             </div>
 
 
-            <div class="nav-valg ">
+            <div class="nav-valg">
                 <h3>Dataregistrering</h3>
                 <a href="registernewcartofleet">Registrer indkøbt bil</a>
                 <a href="register-car">Registrer ny lejeaftale</a>
-                <a href="caridagreement">Registrer ny forhåndsaftale</a>
+                <a href="selectchassisnumber?key=2">Registrer ny forhåndsaftale</a>
             </div>
 
             <br>
@@ -34,7 +34,7 @@
             <div class="nav-valg">
                 <h3>Skade & Udbedring</h3>
                 <a href="getreturncarpage">Registrer bil modtaget retur</a>  <!-- Mangler INDSÆT href-->
-                <a href="carid">Registrer fejl og mangler</a>
+                <a href="selectchassisnumber?key=1">Registrer fejl og mangler</a>
             </div>
 
             <br>
