--- a/src/main/resources/templates/register-advance-agreement-result.html
+++ b/src/main/resources/templates/register-advance-agreement-result.html
@@ -56,7 +56,7 @@
                 </tr>
                 </tbody>
             </table>
-            <a th:href="registeradvanceagreement">
+            <a href="/selectchassisnumber?key=2">
                 <button class="goto_button">
                     Ny aftale
                 </button></a>
