--- a/src/main/resources/templates/fragments/navigator.html
+++ b/src/main/resources/templates/fragments/navigator.html
@@ -34,7 +34,7 @@
 
             <div class="nav-valg">
                 <h3>Skade & Udbedring</h3>
-                <a href="getreturncarpage">Registrer bil modtaget retur</a>  <!-- Mangler INDSÆT href-->
+                <a href="selectchassisnumberreturn?key=3">Registrer bil modtaget retur</a>  <!-- Mangler INDSÆT href-->
                 <a href="selectchassisnumber?key=1">Registrer fejl og mangler</a>
             </div>
 
