--- a/src/main/resources/templates/finance-page.html
+++ b/src/main/resources/templates/finance-page.html
@@ -16,13 +16,21 @@
 
 <div class="whiteboard">
     <div class="tabel">
-        <h1>Den forventede fortjeneste af nuværende lejeaftaler</h1>
-        Den forventede indtjening af på nuværende lejeaftaler:
-        <p th:text="${sumcurrentlease}"></p>
-        Allerede indtjent på nuværende lejeaftaler:
-        <p th:text="${alreadyearned}"></p>
-        Total indtjening på nuværende lejeaftaler:
-        <p th:text="${alreadyearned}+${sumcurrentlease}"></p>
+        <div class="receipt">
+        <h1>Indtjeningen på nuværende lejeaftaler</h1>
+        <table>
+        <tr>
+            <th>Forventet</th>
+            <th>Allerede indtjent</th>
+            <th>Total</th>
+        </tr>
+        <tr>
+            <td> <p th:text="${sumcurrentlease}"></p></td>
+            <td> <p th:text="${alreadyearned}"></p></td>
+            <td> <p th:text="${alreadyearned}+${sumcurrentlease}"></p></td>
+        </tr>
+        </table>
+    </div>
     </div>
 </div>
 </body>
