--- a/src/main/resources/templates/register-advance-agreement-result.html
+++ b/src/main/resources/templates/register-advance-agreement-result.html
@@ -20,6 +20,7 @@
 <div class="whiteboard">
     <div class="receipt">
     <div class="tabel">
+        <div class="receipt">
         <h1>Forhåndsaftalen er nu oprettet</h1>
         <section>
             <table>
@@ -66,6 +67,7 @@
             </a>
 
         </section>
+    </div>
     </div>
     </div>
     </div>
