--- a/src/main/resources/templates/finance-page.html
+++ b/src/main/resources/templates/finance-page.html
@@ -18,7 +18,8 @@
     <div class="tabel">
         <div class="receipt">
         <h1>Indtjeningen på nuværende lejeaftaler</h1>
-        <table>
+            <form class="receipt-form">
+                <table class="skema">
         <tr>
             <th>Forventet</th>
             <th>Allerede indtjent</th>
