--- a/src/main/resources/templates/finance-page.html
+++ b/src/main/resources/templates/finance-page.html
@@ -15,8 +15,7 @@
 
 
 <div class="whiteboard">
-    <div class="tabel">
-        <div class="receipt">
+    <div class="receipt">
         <h1>Indtjeningen på nuværende lejeaftaler</h1>
             <form class="receipt-form">
                 <table class="skema">
@@ -31,9 +30,9 @@
             <td> <p th:text="${alreadyearned}+${sumcurrentlease}"></p></td>
         </tr>
         </table>
+            </form>
     </div>
     </div>
-</div>
 </body>
 
 
